# proto-example

./: CMakeLists.txt  main.cpp
inc/: Canvas.h
protocol/: bar.proto  foo.proto
src/: Canvas.cpp
